# catface

./: .gitignore  CMakeLists.txt  README.md  out
app/assembler/: CMakeLists.txt
app/assembler/src/: main.c
app/compiler/: CMakeLists.txt
app/compiler/src/: compiler.c  compiler.h  main.c
app/disassembler/: CMakeLists.txt
app/disassembler/src/: main.c  main.cpp
app/executor/: CMakeLists.txt
app/executor/src/: font.inc  main.c  main.cpp  sandbox.c  sandbox.h  sandbox_font.inc
app/linker/: CMakeLists.txt
app/linker/src/: main.c
app/vm/: CMakeLists.txt
app/vm/src/: main.cpp
examples/: 150m.cfasm  cf_assembler  cf_disassembler  cf_executor  cgsg.cfasm  codegen_example.cfasm  colored_display.cfasm  const_test.cfasm  display_font.cfasm  display_pressed.cfasm  fisqrt.cfasm  gms_test.cfasm  main.cfasm  main.cfmod  mgs_test.cfasm  palette_test.cfasm  push_pop_test.cfasm  run  sin.cfasm  sqr.cfasm  sqrt_repl.cfasm  sqrt_repl.cfmod  typer.cfasm  yellow_line.cfasm
examples/lang/: example.cf  fib.cf  main.cf  square_equation_solver.cf
examples/rayTracer/: main.cfasm
examples/ray_tracer/: .gitignore  makefile  run
examples/ray_tracer/src/: camera.cfasm  main.cfasm  vec.cfasm
examples/sqrt_repl/: main.cfasm  math.cfasm
impl/sandbox_sdl2/: CMakeLists.txt
impl/sandbox_sdl2/include/: sandbox.h
impl/sandbox_sdl2/src/: sandbox.c  sandbox_font.inc  sandbox_internal.h
lib/asm/: CMakeLists.txt
lib/asm/include/: cf_asm.h
lib/asm/src/: cf_asm_str.c  cf_asm_str.cpp  cf_assemble.c  cf_assemble.cpp  cf_disassemble.c
lib/assembler/: CMakeLists.txt
lib/assembler/include/: cf_assembler.h
lib/assembler/src/: cf_assembler.c  cf_assembler2.c
lib/ast/: CMakeLists.txt
lib/ast/include/: cf_ast.h
lib/ast/src/: cf_ast.c  cf_ast_internal.h  cf_ast_lexer.c  cf_ast_lexer.h  cf_ast_parse.c  cf_ast_parser.c  cf_ast_parser.h  cf_ast_parser_expression.c  cf_ast_parser_interface.c
lib/codegen/: CMakeLists.txt
lib/codegen/include/: cf_codegen.h
lib/codegen/src/: cf_codegen.c  cf_codegen_internal.h
lib/disassembler/: CMakeLists.txt
lib/disassembler/include/: cf_disassembler.h
lib/disassembler/src/: cf_disassembler.c
lib/executable/: CMakeLists.txt
lib/executable/include/: cf_executable.h
lib/executable/src/: cf_executable.c
lib/lexer/: CMakeLists.txt
lib/lexer/include/: cf_lexer.h
lib/lexer/src/: cf_lexer.c
lib/linker/: CMakeLists.txt
lib/linker/include/: cf_linker.h
lib/linker/src/: cf_linker.c
lib/module/: CMakeLists.txt
lib/module/include/: cf_module.h
lib/module/src/: cf_module.c  cf_module.cpp
lib/object/: CMakeLists.txt
lib/object/include/: cf_object.h
lib/object/src/: cf_object.c  cf_object2.c  cf_object_builder.c  cf_object_internal.h
lib/tir/: CMakeLists.txt
lib/tir/include/: cf_tir.h
lib/tir/src/: cf_tir.c  cf_tir_builder.c  cf_tir_builder.h  cf_tir_builder_build_functions.c
lib/util/: CMakeLists.txt
lib/util/include/: cf_arena.h  cf_cli.h  cf_darr.h  cf_deque.h  cf_hash.h  cf_list.h  cf_ordering.h  cf_stack.h  cf_string.h
lib/util/src/: cf_arena.c  cf_cli.c  cf_darr.c  cf_deque.c  cf_hash.c  cf_hash.cpp  cf_list.c  cf_ordering.c  cf_stack.c  cf_stack.cpp  cf_string.c
lib/vm/: CMakeLists.txt
lib/vm/include/: cf_vm.h
lib/vm/src/: cf_vm.c  cf_vm.cpp  cf_vm_interface.c  cf_vm_internal.h  cf_vm_run.c
scripts/: count_lines.py  gen_font_inc.py
test/ast/: CMakeLists.txt  example.cf  main.cpp
test/deque/: CMakeLists.txt  main.cpp
test/list/: CMakeLists.txt  main.cpp
test/list_dot_dump/: CMakeLists.txt  main.cpp
